# Data-Engineering-Zoomcamp

./: .gitignore  notebook.ipynb  pyproject.toml
scripts/: extract.py
